<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ibm.mobilefirstplatform.appid.SignUpSuccessActivity">

    <ProgressBar
        android:id="@+id/resend_email_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="277dp"
            android:layout_height="78dp"
            android:layout_weight="1"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="68dp" />

        <TextView
            android:id="@+id/formattedName"
            android:layout_width="276dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="146dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="We send you reset password email"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="206dp" />

        <Button
            android:id="@+id/backTologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="backToLogin"
            android:text="@string/login"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="254dp" />

        <Button
            android:id="@+id/resendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="resendEmail"
            android:text="@string/resend_email"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="120dp"
            tools:layout_editor_absoluteY="327dp" />

    </LinearLayout>
</RelativeLayout>

